--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3000
 MONGODB_CNN=mongodb+srv://user_test_venta:webhack311!@cluster0.7zpuc.mongodb.net/test
 USER=user_test_venta
 PWD=webhack311!
+SECRETORPRIVATEKEY=estqwseqoweqwh123eqsdakjxh°°"#"Qasd657&$"#E
